# quorumforge-contract-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVENTS.md  PROPOSAL_TYPES.md
scripts/: deploy.sh
src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
test_snapshots/test/: test_add_member.1.json  test_cancelled_cannot_sign.1.json  test_double_sign_rejected.1.json  test_expire_proposal.1.json  test_expired_cannot_sign.1.json  test_get_proposals_by_status.1.json  test_happy_path_auto_execute.1.json  test_non_member_create.1.json  test_non_member_sign.1.json  test_public_execute_after_threshold.1.json  test_remove_member.1.json  test_transfer_funds.1.json  test_update_threshold_too_high.1.json
