[package]
name = "quorumforge-contract"
version = "0.2.0"
edition = "2021"
authors = ["QuorumForge Contributors"]
description = "Trustless N-of-M multi-sig governance contract for open source maintainer boards"
license = "MIT"
repository = "https://github.com/your-org/quorumforge-contract"
keywords = ["soroban", "stellar", "multisig", "governance", "dao"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
